--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
+.header{
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 12vh;
+  display: flex;
+  background: #f5ba13;
+  justify-content: flex-start;
+  align-items: center;
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.2);
+  
+}
+.logo{
+  color: white;
+  font-size: 40px;
+  border: 8px double white ;
+  margin-left: 70px;
+  box-shadow: 5px 5px 15px -2px rgba(0,0,0,0.2);
+  
+}
+.logo-text{
+  color: white;
+  font-size: 45px;
+  margin-left: 10px;
+  text-shadow: 4px 3px rgba(0,0,0,0.2);
+  
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
