--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,12 @@
   
 
 }
+footer{
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 22px;
+  color: gray;
+}
