--- a/src/index.css
+++ b/src/index.css
@@ -89,15 +89,22 @@ textarea{
 }
 #add-icon{
   color: #f5ba13;
-  font-size: 40px;
+  font-size: 60px;
 }
 #add-btn{
   box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.5);
   background: white;
-  border-radius: 120px;
-  padding: 9px;
+  border-radius: 50px;
+  padding: 1px;
   position: relative;
   top: 55px;
   left: 20px;
   
+}
+#add-btn:hover{
+  background: #f5ba13;
+  
+}
+#add-icon:hover{
+  color: white;
 }
