--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   background: #f5ba13;
   justify-content: flex-start;
   align-items: center;
-  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.2);
+  box-shadow: 0px 5px 10px -6px rgba(0,0,0,0.5);
   
 }
 .logo{
@@ -89,22 +89,22 @@ textarea{
 }
 #add-icon{
   color: #f5ba13;
-  font-size: 60px;
+  font-size: 52px;
 }
 #add-btn{
   box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.5);
   background: white;
   border-radius: 50px;
-  padding: 1px;
+  padding: 5px;
   position: relative;
   top: 55px;
   left: 20px;
   
 }
 #add-btn:hover{
-  background: #f5ba13;
-  
+  background-color: #f5ba13;
 }
-#add-icon:hover{
+
+#add-btn:hover #add-icon{
   color: white;
 }
