--- a/src/index.css
+++ b/src/index.css
@@ -33,18 +33,15 @@
 }
 footer{
   width: 100%;
-  position: absolute;
-  bottom: 0;
+  /* position: absolute; */
+  margin-top: 200px;
   text-align: center;
   margin-bottom: 20px;
   font-size: 22px;
   color: gray;
 }
 .main-note{
-  
   padding: 30px;
- position: relative;
- top: 8rem;
  display: flex;
  flex-direction: column;
  justify-content: left;
@@ -81,6 +78,7 @@ textarea{
   font-family: 'Antic Slab', serif;
   font-weight: 600;
 }
+
 @media screen and (min-width:768px) {
   .main-note{
     margin-left: 34%;
@@ -107,4 +105,59 @@ textarea{
 
 #add-btn:hover #add-icon{
   color: white;
+}
+
+.note{
+  padding: 20px;
+  position: relative;
+  top: 8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.5);
+  margin-top: 50px;
+    margin-left: 5%;
+    margin-right: 60%;
+   text-align: left;
+   border-radius: 10px;
+}
+.small-note{
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  
+  
+}
+.btn{
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.5);
+  background: white;
+  border-radius: 50px;
+  padding: 5px;
+  position: relative;
+  top: 5px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin-left: 30%;
+  margin-right: 30%;
+}
+.deleteIcon{
+color: #f5ba13;
+}
+.btn:hover{
+  background-color: red;
+}
+.btn:hover .deleteIcon{
+  color: white;
+}
+@media screen and (min-width:768px) {
+  .note{
+    margin-left: 2%;
+    margin-right: 80%;
+  }
 }
