--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ footer{
  box-sizing: border-box;
  flex-wrap: wrap;
  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.5);
+ 
    margin-left: 15%;
    margin-right: 15%;
   text-align: right;
@@ -109,18 +110,16 @@ textarea{
 
 .note{
   padding: 20px;
-  position: relative;
-  top: 8rem;
+  
+  
   display: flex;
   flex-direction: column;
   justify-content: left;
   align-items: left;
   box-sizing: border-box;
-  flex-wrap: wrap;
   box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.5);
   margin-top: 50px;
-    margin-left: 5%;
-    margin-right: 60%;
+    margin-left: 20px;
    text-align: left;
    border-radius: 10px;
 }
@@ -154,10 +153,4 @@ color: #f5ba13;
 }
 .btn:hover .deleteIcon{
   color: white;
-}
-@media screen and (min-width:768px) {
-  .note{
-    margin-left: 2%;
-    margin-right: 80%;
-  }
 }
