deleting some waste  componenets and creating useState hooks to store the data

--- a/src/index.css
+++ b/src/index.css
@@ -173,3 +173,8 @@ color: #f5ba13;
 .p_wrap{
  overflow-wrap: break-word;
 }
+.main_div{
+  display: "flex";
+   flex-direction: "row";
+    flex-wrap: "wrap"
+}
