--- a/src/index.css
+++ b/src/index.css
@@ -78,13 +78,11 @@ input{
 padding-top: 127px;
 }
 textarea{
+  resize: vertical;
   box-sizing: border-box;
   font-size: 20px;
-  min-height: 60px;
- min-width: 400px;
-  max-width: 400px;
+  width: 100%;
   border: none;
-  float: left;
   text-align: left;
   outline: 0;
   margin-top: 20px;
